Add a build system
Signed-off-by: Michał Górny <mgorny@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -9,3 +9,12 @@ deps =
 commands =
     pyflakes {posargs:pycargoebuild}
     pycodestyle {posargs:pycargoebuild}
+
+[testenv:upload]
+skip_install = true
+deps =
+    build
+    twine
+commands =
+    python -m build -s -w
+    twine upload dist/*
