Add tests for license expression converter
Signed-off-by: Michał Górny <mgorny@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,12 @@
 [tox]
-envlist = qa
+envlist = qa,{py38,py39,py310,py311,pypy3}
+isolated_build = True
+
+[testenv]
+extras =
+    test
+commands =
+    pytest -vv {posargs:test}
 
 [testenv:qa]
 skip_install = true
@@ -7,8 +14,8 @@ deps =
     pycodestyle
     pyflakes
 commands =
-    pyflakes {posargs:pycargoebuild}
-    pycodestyle {posargs:pycargoebuild}
+    pyflakes {posargs:pycargoebuild test}
+    pycodestyle {posargs:pycargoebuild test}
 
 [testenv:upload]
 skip_install = true
