--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,11 @@ dependencies = [
     "tomli >= 1.2.3; python_version < '3.11'",
 ]
 
+[project.optional-dependencies]
+test = [
+    "pytest",
+]
+
 [project.scripts]
 pycargoebuild = "pycargoebuild.__main__:entry_point"
 
