--- a/tox.ini
+++ b/tox.ini
@@ -9,13 +9,16 @@ commands =
     pytest -vv {posargs:test}
 
 [testenv:qa]
-skip_install = true
 deps =
     pycodestyle
     pyflakes
+    mypy
+extras =
+    test
 commands =
     pyflakes {posargs:pycargoebuild test}
     pycodestyle {posargs:pycargoebuild test}
+    mypy {posargs:pycargoebuild test}
 
 [testenv:upload]
 skip_install = true
