Perform type-checking per impl
Signed-off-by: Michał Górny <mgorny@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -3,22 +3,22 @@ envlist = qa,{py38,py39,py310,py311,pypy3}
 isolated_build = True
 
 [testenv]
-extras =
-    test
-commands =
-    pytest -vv {posargs:test}
-
-[testenv:qa]
 deps =
-    pycodestyle
-    pyflakes
     mypy
 extras =
     test
 commands =
+    pytest -vv {posargs:test}
+    mypy {posargs:pycargoebuild test}
+
+[testenv:qa]
+skip_install = true
+deps =
+    pycodestyle
+    pyflakes
+commands =
     pyflakes {posargs:pycargoebuild test}
     pycodestyle {posargs:pycargoebuild test}
-    mypy {posargs:pycargoebuild test}
 
 [testenv:upload]
 skip_install = true
