--- a/pycargoebuild/license-mapping.conf
+++ b/pycargoebuild/license-mapping.conf
@@ -147,6 +147,7 @@ Sleepycat = Sleepycat
 SSPL-1.0 = SSPL-1
 TCL = tcltk
 TCP-wrappers = tcp_wrappers_license
+Unicode-DFS-2016 = Unicode-DFS-2016
 Unlicense = Unlicense
 Vim = vim
 VOSTROM = VOSTROM
