--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,14 @@ extras =
     test
 commands =
     pytest -vv {posargs:test}
-    mypy {posargs:pycargoebuild test}
+    mypy {posargs:integration_test pycargoebuild test}
+
+[testenv:integration]
+deps =
+extras =
+    test
+commands =
+    pytest -vv {posargs:integration_test}
 
 [testenv:qa]
 skip_install = true
@@ -17,8 +24,8 @@ deps =
     pycodestyle
     pyflakes
 commands =
-    pyflakes {posargs:pycargoebuild test}
-    pycodestyle {posargs:pycargoebuild test}
+    pyflakes {posargs:integration_test pycargoebuild test}
+    pycodestyle {posargs:integration_test pycargoebuild test}
 
 [testenv:upload]
 skip_install = true
