--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,10 @@ disallow_untyped_defs = true
 no_implicit_optional = true
 
 [[tool.mypy.overrides]]
-module = "test.*"
+module = [
+    "integration_test.*",
+    "test.*",
+]
 # requiring explicit types for all test methods would be cumbersome
 disallow_untyped_defs = false
 check_untyped_defs = true
