--- a/integration_test/license-mapping.conf
+++ b/integration_test/license-mapping.conf
@@ -6,6 +6,7 @@ BSD-2-Clause = BSD-2
 BSD-3-Clause = BSD
 CC0-1.0 = CC0-1.0
 ISC = ISC
+LGPL-3.0-only = LGPL-3
 MIT = MIT
 MPL-2.0 = MPL-2.0
 Unicode-DFS-2016 = Unicode-DFS-2016
