Add integration test for rustls
Signed-off-by: Michał Górny <mgorny@gentoo.org>

--- a/integration_test/license-mapping.conf
+++ b/integration_test/license-mapping.conf
@@ -4,6 +4,7 @@ Apache-2.0 WITH LLVM-exception = Apache-2.0-with-LLVM-exceptions
 Artistic-2.0 = Artistic-2
 BSD-2-Clause = BSD-2
 BSD-3-Clause = BSD
+BSL-1.0 = Boost-1.0
 CC0-1.0 = CC0-1.0
 ISC = ISC
 LGPL-3.0-only = LGPL-3
