--- a/integration_test/license-mapping.conf
+++ b/integration_test/license-mapping.conf
@@ -6,6 +6,7 @@ BSD-2-Clause = BSD-2
 BSD-3-Clause = BSD
 BSL-1.0 = Boost-1.0
 CC0-1.0 = CC0-1.0
+EPL-2.0 = EPL-2.0
 ISC = ISC
 LGPL-3.0-only = LGPL-3
 MIT = MIT
