--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = qa,{py38,py39,py310,py311,py312,pypy3}
+envlist = qa,{py39,py310,py311,py312,pypy3}
 isolated_build = True
 
 [testenv]
