--- a/integration_test/license-mapping.conf
+++ b/integration_test/license-mapping.conf
@@ -1,4 +1,6 @@
 [spdx-to-ebuild]
+0BSD = 0BSD
+AGPL-3.0-only = AGPL-3
 Apache-2.0 = Apache-2.0
 Apache-2.0 WITH LLVM-exception = Apache-2.0-with-LLVM-exceptions
 Artistic-2.0 = Artistic-2
@@ -8,7 +10,10 @@ BSL-1.0 = Boost-1.0
 CC0-1.0 = CC0-1.0
 EPL-2.0 = EPL-2.0
 ISC = ISC
+GPL-3.0-only = GPL-3
+GPL-3.0-or-later = GPL-3+
 LGPL-3.0-only = LGPL-3
 MIT = MIT
 MPL-2.0 = MPL-2.0
 Unicode-DFS-2016 = Unicode-DFS-2016
+Zlib = ZLIB
