--- a/integration_test/license-mapping.conf
+++ b/integration_test/license-mapping.conf
@@ -15,5 +15,6 @@ GPL-3.0-or-later = GPL-3+
 LGPL-3.0-only = LGPL-3
 MIT = MIT
 MPL-2.0 = MPL-2.0
+OFL-1.1 = OFL-1.1
 Unicode-DFS-2016 = Unicode-DFS-2016
 Zlib = ZLIB
