--- a/tox.ini
+++ b/tox.ini
@@ -21,11 +21,9 @@ commands =
 [testenv:qa]
 skip_install = true
 deps =
-    pycodestyle
-    pyflakes
+    ruff
 commands =
-    pyflakes {posargs:integration_test pycargoebuild test}
-    pycodestyle {posargs:integration_test pycargoebuild test}
+    ruff check --preview {posargs:integration_test pycargoebuild test}
 
 [testenv:upload]
 skip_install = true
