--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,14 @@ pycargoebuild = "pycargoebuild.__main__:entry_point"
 [project.urls]
 Homepage = "https://github.com/projg2/pycargoebuild/"
 
+[tool.flit.sdist]
+include = [
+    "COPYING",
+    "integration_test",
+    "test",
+    "tox.ini",
+]
+
 [tool.mypy]
 disallow_untyped_defs = true
 no_implicit_optional = true
