--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["flit_core >=3.2,<4"]
+requires = ["flit_core >=3.7,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
@@ -28,6 +28,9 @@ pycargoebuild = "pycargoebuild.__main__:entry_point"
 
 [project.urls]
 Homepage = "https://github.com/projg2/pycargoebuild/"
+
+[tool.flit.external-data]
+directory = "data"
 
 [tool.flit.sdist]
 include = [
