--- a/integration_test/license-mapping.conf
+++ b/integration_test/license-mapping.conf
@@ -19,4 +19,5 @@ MPL-2.0 = MPL-2.0
 OFL-1.1 = OFL-1.1
 Ubuntu-font-1.0 = UbuntuFontLicense-1.0
 Unicode-DFS-2016 = Unicode-DFS-2016
+Unlicense = Unlicense
 Zlib = ZLIB
