Add an integration test for milkshake-terminal
Signed-off-by: Michał Górny <mgorny@gentoo.org>

--- a/integration_test/license-mapping.conf
+++ b/integration_test/license-mapping.conf
@@ -14,6 +14,7 @@ GPL-3.0-only = GPL-3
 GPL-3.0-or-later = GPL-3+
 LGPL-3.0-only = LGPL-3
 MIT = MIT
+MIT-0 = MIT-0
 MPL-2.0 = MPL-2.0
 OFL-1.1 = OFL-1.1
 Unicode-DFS-2016 = Unicode-DFS-2016
