--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = qa,py39,py310,py311,py312,py313,pypy{39,310}
+envlist = qa,py310,py311,py312,py313,pypy310
 isolated_build = True
 
 [testenv]
