Fix ruffle integration test
No clue why the results changed but *shrug*.

Signed-off-by: Michał Górny <mgorny@gentoo.org>

--- a/integration_test/license-mapping.conf
+++ b/integration_test/license-mapping.conf
@@ -17,5 +17,6 @@ MIT = MIT
 MIT-0 = MIT-0
 MPL-2.0 = MPL-2.0
 OFL-1.1 = OFL-1.1
+Ubuntu-font-1.0 = UbuntuFontLicense-1.0
 Unicode-DFS-2016 = Unicode-DFS-2016
 Zlib = ZLIB
