GHA: update setup-python and enable pip cache
Signed-off-by: Michał Górny <mgorny@gentoo.org>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,9 +12,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+          cache: pip
       - name: Install tox
         run: pip install tox
       - name: Cache fetched crates
