--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,7 +4,7 @@ jobs:
   ci:
     strategy:
       matrix:
-        python-version: ["3.10", "3.11", "3.12", "3.13-dev", "pypy-3.10"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14-dev", "pypy-3.10", "pypy-3.11"]
         suite: ["py", "integration"]
       fail-fast: false
     runs-on: ubuntu-latest
