--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = qa,py310,py311,py312,py313,pypy310
+envlist = qa,py310,py311,py312,py313,py314,pypy310,pypy311
 isolated_build = True
 
 [testenv]
