--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dynamic = ["version", "description"]
 readme = "README.rst"
 requires-python = ">=3.10"
 dependencies = [
+    "jinja2",
     "license_expression",
     "tomli >= 1.2.3; python_version < '3.11'",
 ]
